src/test/ui/no-implicit-prelude.stderr
error[E0405]: cannot find trait `Add` in this scope
  --> $DIR/no-implicit-prelude.rs:10:6
   |
LL | impl Add for Test {}
   |      ^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
LL | use std::ops::Add;
   |

error[E0405]: cannot find trait `Clone` in this scope
  --> $DIR/no-implicit-prelude.rs:11:6
   |
LL | impl Clone for Test {}
   |      ^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use std::clone::Clone;
   |
LL | use std::prelude::v1::Clone;
   |

error[E0405]: cannot find trait `Iterator` in this scope
  --> $DIR/no-implicit-prelude.rs:12:6
   |
LL | impl Iterator for Test {}
   |      ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use std::iter::Iterator;
   |
LL | use std::prelude::v1::Iterator;
   |

error[E0405]: cannot find trait `ToString` in this scope
  --> $DIR/no-implicit-prelude.rs:13:6
   |
LL | impl ToString for Test {}
   |      ^^^^^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use std::prelude::v1::ToString;
   |
LL | use std::string::ToString;
   |

error[E0405]: cannot find trait `Writer` in this scope
  --> $DIR/no-implicit-prelude.rs:14:6
   |
LL | impl Writer for Test {}
   |      ^^^^^^ not found in this scope

error[E0425]: cannot find function `drop` in this scope
  --> $DIR/no-implicit-prelude.rs:17:5
   |
LL |     drop(2)
   |     ^^^^ not found in this scope
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use std::mem::drop;
   |
LL | use std::prelude::v1::drop;
   |

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0405, E0425.
For more information about an error, try `rustc --explain E0405`.
